# rs-embed

./: .gitignore  Cargo.toml  README.md  setup.py
examples/: search.py
rs_embed/: __init__.py  embed.py
scripts/: sort_embs.py
src/: kmeans.rs  lib.rs
tests/: test_module.py
