[package]
name = "rs-embed"
version = "0.1.0"
authors = ["James Hong <james.hong@cs.stanford.edu>"]

[lib]
name = "rs_embed"
crate-type = ["cdylib"]

[dependencies]
memmap = "0.7.0"
byteorder = "1.2.7"
rayon = "1.0.3"
rkm = "0.3.0"
ndarray = "0.9.1"
pyo3 = { version = "0.5.0", features = ["extension-module"] }
