[package]
name = "rs-embed"
version = "0.1.0"
authors = ["James Hong <james.hong@cs.stanford.edu>"]

[lib]
name = "rs_embed"
crate-type = ["cdylib"]

[dependencies]
memmap = "0.7.0"
byteorder = "1.2.7"
rayon = "1.0.3"
rand = "0.6.1"
num = "0.2.0"
ndarray = "0.12.1"
ndarray-parallel = "0.9.0"
rustlearn = "0.5.0"
kdtree = "0.5.1"
pyo3 = { version = "0.8.2", features = ["extension-module"] }
